Fix horizontal scroll on bground img

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -9,9 +9,10 @@ html {
 
 /* Code for background image from Code Institute's Boutique Ado walkthrough */
 body {
-    background: url('https://res.cloudinary.com/elyserh/image/upload/v1658933734/landing-page-hero_g4w1tp.jpg') no-repeat center center fixed;
+    background: url('https://res.cloudinary.com/elyserh/image/upload/v1658933734/landing-page-hero_g4w1tp.jpg') no-repeat center fixed;
     background-size: cover;
     height: calc(100vh - 164px);
+    overflow-x: hidden;
     font-family: 'Anek Latin', monospace, sans-serif;
     color: #faebd7;
 }
